SERVER-6559 do not segfault parsing collection name

Rework two lines of code to not crash on missing periods in
namespace names being checked for correctness.